# FinCore

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  custom.py  pyproject.toml  requirements.txt
backend/api/: models.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_category_root.py  0002_default_categories.py  0003_alter_expense_date_alter_income_date.py  0003_category_root.py  0004_add_default_categories.py
backend/backend/: celery.py  settings.py
backend/email_templates/: base.html  verify_email.html
backend/usermanagement/: apps.py  middleware.py  models.py  serializers.py  urls.py  views.py
backend/usermanagement/migrations/: 0001_initial.py  0002_authacc_verified.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/Auth/: LoginForm.js  PasswordInput.js  RegisterForm.js
frontend/src/components/elements/: Button.js  Input.js  LoadingSpinner.js
frontend/src/components/ui/: Background.js  (+1 more)
frontend/src/config/: app.js
frontend/src/contexts/: AuthContext.js
frontend/src/hooks/: useErrorHandler.js
frontend/src/pages/: AuthPage.js  CategoriesPage.js  DashboardPage.js  ExpensesPage.js  HomePage.js  IncomesPage.js  ReportsPage.js  VerifyPage.js
frontend/src/utils/: api.js  apiClient.js  auth.js  cache.js  errorHandler.js  financeApi.js  navigation.js  reportApi.js  statePreservation.js
nginx/: nginx.conf
